--- a/elvis-personalwebsite/resume.html
+++ b/elvis-personalwebsite/resume.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html class="full" lang="en">
     <head>
-    <title>Elvis Vasquez | programmer</title>
+    <title>Elvis Vasquez | programmer | resume page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="resume.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a  href="resume.html">Resume</a>
+                            <a  href="index.html">Home</a>
                         </li>
                         <li>
                             <a  href="activism.html">Activism</a>
@@ -54,8 +54,6 @@
             <!-- /.container -->
         </nav>
 
-        <h1 class="text" id="name">Elvis Vasquez</h1>
-        <p class="text" id="info"> Hey, I am an activist / programmer with experience<br>in javascript, html, css, and python. <br>I'm always around the New York City area.<br> Contact me for more info xoxo.</p>
-
+        <img id="resume" src="realresume1.png">
     </body>
 </html>
