--- a/elvis-pong/index.html
+++ b/elvis-pong/index.html
@@ -1,10 +1,16 @@
 <html>
     <head> 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="sketch.js"></script>
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
-
+        <button type="button" class="reset" onclick="reset()">Play again!</button>
+        <button type="button" class="level1" onclick="firstLevel()">Level 1</button>
+        <button type="button" class="level2" onclick="nextLevel()">Level 2</button>
+        <h3 id="score">Score: 0</h3>
+        <h1>Use the arrow keys to move</h1> 
     </body>
 
 </html>
